--- a/index.css
+++ b/index.css
@@ -1,3 +1,56 @@
-#heading{
-    color: orange;
+.header{
+  display: flex;
+  justify-content: space-between;
+  border:1px solid black ;
+}
+
+.logo{
+    width: 200px;
+}
+
+.nav-items {
+    padding: 0px 20px;
+}
+
+.nav-items > ul{
+    display: flex;
+    list-style: none;
+    font-size: 24px;
+    
+}
+
+.nav-items > ul > li {
+    padding: 10px;
+    margin: 10px;
+    
+}
+
+.res-conatiner{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.res-card{
+    margin: 5px;
+    width: 200px;
+   padding: 5px;
+}
+
+.res-card:hover{
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+.serach{
+    padding: 10px;
+
+}
+.res-logo{
+ width: 100%;
+    
+}
+
+.filter-btn{
+    margin: 10px;
+    cursor: pointer;
 }
